[tool.poetry]
name = "datasetstatistics"
version = "0.1.0"
description = ""
authors = ["Bram Devlaminck <bram.devlaminck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
