[tool.poetry]
name = "datasetstatistics"
version = "0.1.0"
description = ""
authors = ["Bram Devlaminck <bram.devlaminck@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.0"
black = "^23.10.1"
isort = "^5.12.0"
regex = "^2023.12.25"
squarify = "^0.4.3"
pandas = "^2.2.2"
plotly = "^5.21.0"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
